# verdict-dfir-beta

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .mcp.json.docker  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  QUICKSTART.md  README.md  SECURITY.md  install.sh  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  rust-toolchain.toml
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: config.yml  pick-an-open-problem.yml  question.yml
.github/workflows/: l0-static.yml  release.yml
agent-config/: AGENTS.md  JUDGING.md  MEMORY.md  PLAYBOOK.md  SOUL.md  TOOLS.md
apps/tui/: Cargo.toml  README.md
apps/tui/src/: app.rs  cli.rs  discovery.rs  keymap.rs  lib.rs  main.rs  runtime.rs
apps/tui/src/case/: audit_tail.rs  loader.rs  mod.rs  model.rs  runner.rs  status.rs
apps/tui/src/live/: driver.rs  mod.rs  state.rs  ui.rs
apps/tui/src/ui/: finding_detail.rs  findings_list.rs  help.rs  mod.rs  theme.rs  verdict_header.rs
apps/tui/tests/: audit_tail_growth.rs  live_handoff.rs  snapshot_tests.rs
apps/tui/tests/snapshots/: attack-samples-evtx.detail.txt  attack-samples-evtx.list.txt  live-tailing.txt  nitroba.detail.txt  nitroba.list.txt
apps/web/: README.md  package.json
assets/yara/: README.md  disk-triage.yar
docker/: dfir.Dockerfile  l1-compose.yml  l1-devbase.Dockerfile
docs/: DATASET.md  LIMITATIONS.md  accuracy-report.md  architecture.md  brand.md  codex-compatibility.md  community-response.md  contribution-model.md  cryptographic-attestation.md  extending-the-tool-surface.md  fact-fidelity-notes.md  fact-fidelity.md  false-positives.md  glossary.md  help-wanted.md  index.md  live-test-matrix.md  onboarding.md  provability-standard.md  red-team-challenge.md  release-surface.md  troubleshooting.md  trust-benchmark.md  tui.md
docs/adr/: 0001-phase-4-native-agent-runtime.md  README.md  template.md
docs/analyst/: tool-playbooks.md
docs/benchmark/: RESULTS.md
docs/diagrams/: 04-competitive-landscape.drawio  verdict-code-architecture.mmd
docs/reference/: dependencies.md  environment-variables.md  mcp-and-tools.md
docs/release-evidence/: README.md  accuracy-report.json  detection-fallbacks-review.md  devpost-update-draft.md  stage-two-evidence.md
docs/runbooks/: github-remote-bootstrap.md  local-smoke-gate.md  n8n-automation-integration.md  readiness-packet-windows.md
docs/sandbox/: optional-os-hardening.md
docs/showcase/: README.md
docs/using/: docker-backend.md  evidence-intake.md  fleet-analysis.md  reports.md  running-verdict.md
goldens/: CORPUS.json
goldens/fact-fidelity/: held-out-findings.json
goldens/nhc003-synth-carve/: expected-findings.json  make-image.py
goldens/nist-hacking-case/: attack-assertions.yaml
goldens/synthetic-toolless/: expected-findings.json
goldens/szechuan/: expected-findings.json
goldens/verifier-regression/: README.md  (+1 more)
scripts/: _report_style.css  accuracy  accuracy-report-smoke.py  agent-mcp-smoke.py  attack-flow  attackflow-hostpy-smoke.py  attackflow-render-smoke.py  attackflow-smoke.py  benchmark  benchmark-smoke.py  benign-gate-smoke.py  build-offline-report.py  caseforge-contract-smoke.py  codex-dashboard.ps1  codex-dashboard.sh  competitor-watch.sh  dfir-container-contract-smoke.py  divergence-smoke.py  doctor-agent-provider-smoke.py  doctor-offline-smoke.py  doctor.sh  evidence-agnostic-smoke.py  evidence-traceability-index-smoke.py  evidence_traceability_index.py  fact-fidelity-rate.py  fair-fight-evtx-scorecard.py  find-evil  find-evil-sift  find_evil_auto.py  finding-schema-smoke.py  fleet_correlate.py  forensic-allowlist.txt  fp-floor-check.sh  generate-accuracy-report.py  goldens-keyblind-smoke.py  ground_verdict.py  grounding-smoke.py  injection-self-attack.py  install-dfir-tools.sh  install.sh  (+54 more)
services/agent_mcp/: ...  README.md  pyproject.toml
services/agent_mcp/findevil_agent_mcp/: custody_path_policy.py  injection_ledger.py  injection_self_attack.py  server.py
services/agent_mcp/findevil_agent_mcp/tools/: __init__.py  _input_limits.py  accuracy_compare.py  audit_append.py  audit_verify.py  correlate_findings.py  detect_contradictions.py  find_ai_signatures.py  judge_findings.py  manifest_finalize.py  manifest_verify.py  memory_recall.py  memory_remember.py  test_manifest_tools.py  verify_finding.py
services/agent_mcp/tests/: conftest.py  test_accuracy_compare_tool.py  test_ach_tools.py  test_ai_signatures_tool.py  test_audit_tools.py  test_controller_capability.py  test_custody_path_policy.py  test_detect_contradictions_antiforensics.py  test_injection_ledger.py  test_judge_injection_escalation.py  test_manifest_tools.py  test_manifest_workflow_gate.py  test_memory_tools.py  test_no_forbidden_verbs.py  test_registry.py  test_server_boot.py  test_stdio_input_bounds.py  test_stdio_smoke.py  test_verify_finding_tool.py
services/mcp/: Cargo.toml  README.md
services/mcp/src/: lib.rs  pathnorm.rs  server.rs
services/mcp/src/crypto/: mod.rs
services/mcp/src/server/: evidence_access.rs  injection_ledger.rs
services/mcp/src/tools/: argsafe.rs  ausearch.rs  bits_parse.rs  browser_history.rs  bulk_extract.rs  case_id.rs  case_open.rs  cloud_audit.rs  disk.rs  email_parse.rs  ewf_segments.rs  exif_parse.rs  ez_parse.rs  hashset_lookup.rs  hayabusa_scan.rs  indx_parse.rs  journalctl_query.rs  login_accounting.rs  mac_triage.rs  mft_timeline.rs  mod.rs  nfdump_query.rs  pcap_triage.rs  plaso_parse.rs  proc_runner.rs  pst_parse.rs  setupapi_parse.rs  srum_parse.rs  suricata_eve.rs  thumbcache_parse.rs  usnjrnl_query.rs  usnjrnl_reader.rs  vol_malfind.rs  vol_pslist.rs  vol_psscan.rs  vol_psxview.rs  vol_run.rs  vss.rs  wmi_persist_parse.rs  yara_scan.rs
services/mcp/src/tools/browser_history/: history_readers.rs  metadata_readers.rs  types.rs
services/mcp/tests/: browser_history_smoke.rs  browser_metadata_smoke.rs  browser_schema_edge_smoke.rs  bulk_extract_smoke.rs  bypass_paths.rs  hashset_lookup_smoke.rs  mft_timeline_smoke.rs  spoliation_bypass.rs  thumbcache_parse_smoke.rs  tool_smoke.rs  yara_scan_smoke.rs
(+210 files in other folders)
