[package]
name = "verdict-tui"
version = "0.1.0"
description = "VERDICT read-only terminal case viewer — renders a finished case directory; never opens evidence and never emits a Finding."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# A binary + a library face so the snapshot tests can build the case
# model and render frames without spawning the interactive terminal.
[lib]
name = "verdict_tui"
path = "src/lib.rs"

[[bin]]
name = "verdict-tui"
path = "src/main.rs"

[dependencies]
# ratatui drives the terminal UI. 0.30 (not 0.29) because 0.29 pins
# `unicode-width = "=0.2.0"`, which conflicts irreconcilably with the
# workspace's yara-x pin (needs unicode-width ^0.2.2). 0.30 dropped that
# hard pin and makes crossterm a non-optional dependency, so the backend
# (re-exported as `ratatui::crossterm`) and `TestBackend` are always
# available — the latter is what `--print` and the snapshot tests render
# into.
ratatui = "0.30"

# The case bundle is loaded as loose `serde_json::Value` with typed
# accessors on top — verdict.json has ~30 top-level keys and carries no
# top-level schema_version, so a hand-written struct would be brittle.
serde_json = "1"

# Structured, documented load errors. Same major as the rest of the
# workspace so no new lock entry is introduced.
thiserror = "2"

[dev-dependencies]
# Per-test scratch directories for the discovery tests. Same pin as the
# rest of the workspace, so no new lock entry is introduced.
tempfile = "3"

[lints]
workspace = true
