# Spec #2 + Amendment A2. Python MCP server wrapping the M2
# crypto custody stack and the M4 ACH (Analysis of Competing
# Hypotheses) judge/correlator. Boots via stdio; Claude Code
# auto-discovers it via the repo-root .mcp.json.
#
# This package is a thin protocol shim — it owns no domain logic.
# All Merkle/signer/judge/correlator logic lives in
# `findevil-agent`; we depend on it as a path dep.

[project]
name = "findevil-agent-mcp"
version = "0.1.0"
description = "MCP server exposing M2 crypto + M4 ACH stacks as typed tools for Claude Code."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "Find Evil! team" },
]

dependencies = [
  # Directly used for the bounded raw-byte stdio wrapper.
  "anyio>=4.5,<5.0",

  # Anthropic MCP Python SDK. Pinned per Spec #2 §16 conventions —
  # 1.x is the first stable line; 2.x will require migration.
  "mcp>=1.0,<2.0",

  # Pydantic v2 for typed tool I/O. Same pin as the agent service
  # so Pydantic models stay assignment-compatible.
  "pydantic>=2.7,<3.0",

  # The wrapped logic. Path dep so we never have a published-package
  # version drift between the wrapper and the wrapped code.
  "findevil-agent",

  # Structured logging — keeps server-side debug output JSON-shaped
  # so the launching Claude Code session can pipe it cleanly.
  "structlog>=24.4",

  # mcp imports pydantic-settings providers at server import time;
  # those providers require python-dotenv even when no .env is loaded.
  "python-dotenv>=1.2.2,<1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.7.4",
  "mypy>=1.11",
]

[project.scripts]
# Lets the `.mcp.json` use a clean entry point alongside `python -m`.
findevil-agent-mcp = "findevil_agent_mcp.server:run"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["findevil_agent_mcp"]

[tool.uv]
# Match the wrapped agent's resolver policy for optional prerelease-compatible
# forensic/tooling dependencies.
prerelease = "allow"
constraint-dependencies = [
  "cryptography>=48.0.1,<49",
  "idna>=3.15,<4",
  "pydantic-settings>=2.14.2,<3",
  "pyjwt>=2.13,<3",
  "python-multipart>=0.0.31,<1",
  "starlette>=1.3.1,<2",
  "tuf>=7,<8",
  "urllib3>=2.7,<3",
]

[tool.uv.sources]
findevil-agent = { path = "../agent", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: requires a live `mcp` SDK and stdio loop",
]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pydantic.*",
  "ignore::DeprecationWarning:mcp.*",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
warn_unused_ignores = true
