[package]
name = "findevil-mcp"
version = "0.1.0"
description = "Find Evil! typed Rust MCP server — narrow DFIR tool surface, no execute_shell."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Per Spec #2 §1: a single binary + a library face so tests can
# import tool modules without spinning up the full stdio server.
[lib]
name = "findevil_mcp"
path = "src/lib.rs"

[[bin]]
name = "findevil-mcp"
path = "src/main.rs"

# Dependency pins per Spec #2 §16.
# evtx, rs_merkle, duckdb versions are locked; do not upgrade
# without a spec amendment.
[dependencies]
# rmcp (Spec #2 §4.1) was the planned MCP SDK but was deliberately
# NOT activated — see CLAUDE.md "Spec/code divergences" §5.  The
# server in `src/server.rs` is a hand-rolled stdio JSON-RPC 2.0
# implementation pinned to MCP 2024-11-05 for wire-format stability
# across rmcp's API churn and dispatch-shape parity with the
# Python `findevil-agent-mcp`.  This commented-out line is left
# as a deliberate marker; don't uncomment without a spec amendment.
# rmcp = { version = "=0.16.0", features = ["server", "transport-io"] }

# Hashing — stdlib-friendly sha2 crate. No pin across workspace
# since this is a transitive of downstream tools too.
sha2 = "0.11"

# omerbenamram's EVTX parser — MIT/Apache-2.0, ~1600x faster than
# python-evtx. Linked in-process per Spec #2 §16. Pinned exact per
# the spec's library version table.
evtx = "=0.11.2"

# Pure-Rust Windows Prefetch parser — MIT, supports MAM-compressed
# Win10+ format and SCCA Win7-/8.1. Used by the `prefetch_parse` tool.
# `forensic-rs` is its filesystem abstraction; we use StdVirtualFS to
# wrap the real disk.
frnsc-prefetch = "=0.13.3"
forensic-rs = "=0.13"

# omerbenamram's Master File Table parser — MIT, 100% safe Rust.
# Used by the `mft_timeline` tool. The tool preflights record sizing and
# update-sequence metadata before handing attacker-controlled bytes to 0.7.
mft = "=0.7.0"

# Windows Registry hive parsing for `registry_query` is handled in-tree by
# `src/tools/regf.rs` (no external crate). frnsc-hive only implemented the
# modern `lh` subkey-list cell and panicked `unimplemented!()` on the
# `lf`/`li`/`ri` cells used by Windows XP-era hives; notatin (the Apache-2.0
# alternative) did not build under the previous rustc line. The in-tree reader
# handles all four subkey-list types + resident/non-resident/`db` values.

# yara-x — BSD-3-Clause, pure-Rust YARA implementation (VirusTotal).
# Used by `yara_scan` for malware/IOC scanning. Pin all sibling crates to the
# same 1.19 release; that line uses Wasmtime 43 instead of vulnerable 38.x.
yara-x = "=1.19.0"
yara-x-macros = "=1.19.0"
yara-x-parser = "=1.19.0"
yara-x-proto = "=1.19.0"

# ntfs-core — Apache-2.0, pure-Rust USN record decoder. A small local
# streaming adapter feeds it carved `$UsnJrnl:$J` records without importing
# the upstream reporting stack or its unrelated, older SQLite dependency.
ntfs-core = "=0.6.0"

# rusqlite (MIT) parses browser SQLite DBs (Chrome/Edge `History`, Firefox
# `places.sqlite`, Chromium Cookies/Web Data/Login Data) read-only in the
# `browser_history` tool. `bundled`
# vendors SQLite from source so a judge's fresh build needs no system
# libsqlite3-dev (fully reproducible). 0.39.0 resolves libsqlite3-sys 0.37.0,
# bundling SQLite 3.51.3 above the 3.50.3 fix floor for CVE-2025-7709's
# attacker-controlled corrupt-FTS-index path on the supported Rust toolchain.
rusqlite = { version = "=0.39.0", features = ["bundled", "hooks", "limits"] }

# cfb — MIT, pure-Rust Compound File Binary (OLE2/CFB) reader.
# Used by `thumbcache_parse` to read XP-era `Thumbs.db` thumbnail caches
# (the `Catalog` stream + per-index thumbnail streams). Runtime use is
# read-only; the crate's write face is used only by tests to synthesize
# fixtures. Pinned exact per the spec's library pin discipline; MSRV 1.74
# (toolchain is pinned at 1.91).
cfb = "=0.14.0"

# kamadak-exif — BSD-2/Apache-2, pure-Rust EXIF metadata reader. Used by
# `exif_parse` to read camera/GPS/timestamp/software tags from user-content
# images (JPEG/TIFF/HEIF/PNG/WebP containers). Read-only; no image bytes leave
# the tool, only structured tag values. Pinned exact per the library-pin
# discipline.
kamadak-exif = "=0.6.1"

# mail-parser — Apache-2/MIT, pure-Rust RFC 5322 / MIME reader. Used by
# `email_parse` to read `.eml` single messages and `.mbox` archives (headers +
# attachment metadata; never decodes/exports body payloads to disk). Deterministic
# structured output. Pinned exact.
mail-parser = "=0.11.4"

# UUID v4 for deterministic case_id generation.
uuid = { version = "1", features = ["v4", "serde"] }

# Serde for the typed JSON schema the hand-rolled stdio server in
# `src/server.rs` emits in tools/list responses (Spec/code
# divergence §5 — rmcp not used).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema generation for the MCP `tools/list` envelope. We
# advertise each tool's input schema via `schemars` so MCP clients
# (Claude Code, Claude Desktop, ChatGPT) can validate arguments
# before sending. 1.x is current; pinning the minor lets it patch.
schemars = { version = "1", features = ["preserve_order"] }

# thiserror for structured, documented error types.
thiserror = "2"

# Safe O_NOFOLLOW constants for race-resistant opens of native-parser output.
# The crate remains `forbid(unsafe_code)`; only libc's platform constants are used.
libc = "0.2"

# Normalize the `\\?\` verbatim prefix that `std::fs::canonicalize` prepends on
# Windows, which the evidence-authorization path logic does not otherwise accept.
# A no-op passthrough to `fs::canonicalize` on Unix. See `crate::pathnorm`.
dunce = "=1.0.5"

# Async runtime. Used by tool modules that benefit from async
# subprocess management (vol_*, hayabusa_scan) and by
# the stdio reader in `src/server.rs`.  Originally added in
# anticipation of rmcp; the hand-rolled server uses it directly.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }

# Time/chrono for ISO-8601 timestamps in the eventual audit trail.
chrono = { version = "0.4", features = ["serde"] }

# Tracing for structured logs; lightweight.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hex encoding for SHA-256 fingerprints emitted on every tool result.
# Promoted from dev-dependencies because the stdio server (`src/server.rs`)
# attaches `output_sha256` hex to every successful response's `_meta`.
hex = "0.4"

# Safe process-group syscalls (getpgrp / killpg) for the non-Linux whole-tree
# subprocess reaper in `tools::proc_runner`. Linux reaps via `/proc`, so this is
# only pulled in on BSD/macOS, where `/proc` does not exist. rustix is already
# in the dependency graph transitively; it keeps the crate `forbid(unsafe_code)`.
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
rustix = { version = "0.38", features = ["process"] }

[dev-dependencies]
# tempfile for per-test scratch dirs.
tempfile = "3"
# rusqlite in tests builds the Chrome/Firefox history fixtures the
# browser_history smoke parses (same pin as the runtime dep).
rusqlite = { version = "=0.39.0", features = ["bundled"] }
# dunce mirrors the product's `pathnorm::canonicalize` so path assertions can
# compare against the same Windows `\\?\`-normalized form the tools persist
# (same pin as the runtime dep).
dunce = "=1.0.5"

[lints]
workspace = true
